--- a/CatFactsApp/MainWindow.xaml
+++ b/CatFactsApp/MainWindow.xaml
@@ -4,9 +4,27 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CatFactsApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        d:DataContext="{d:DesignInstance local:MainWindow}"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        ResizeMode="NoResize"
+        mc:Ignorable="d" Loaded="Window_Loaded" FontSize="24"
+        Title="Cat Facts" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Random Cat Facts" Foreground="Orange" FontWeight="Bold" FontSize="45"/>
+        </StackPanel>
+        <ListView ItemsSource="{Binding allFacts.all, Mode=OneWay}" Grid.Row="1" Height="350" ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderThickness="0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Width="755" Background="DarkCyan">
+                        <TextBlock Foreground="White" Text="{Binding text, Mode=OneWay}" TextWrapping="Wrap" Margin="10" />
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Window>
